[gd_scene load_steps=7 format=2]

[ext_resource path="res://Hexagon Levels/Pavel/Code/world.gd" type="Script" id=1]
[ext_resource path="res://Hexagon Levels/Pavel/Assets/niveau1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hexagon Levels/Pavel/Code/EndState.gd" type="Script" id=3]
[ext_resource path="res://Hexagon Levels/Pavel/Assets/run_away_little_girl.wav" type="AudioStream" id=4]
[ext_resource path="res://Hexagon Levels/Jan/Assets/hexagonal_floor.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[node name="root" type="Spatial"]

transform = Transform( 0.558548, 0, 0, 0, 1, 0, 0, 0, 0.612175, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="world" type="Spatial" parent="." index="0"]

transform = Transform( 0.692107, 0, 0, 0, 1, 0, 0, 0, 0.723115, 0, 0, 0.902059 )
script = ExtResource( 1 )

[node name="End" type="Label" parent="world" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 435.0
margin_top = 257.0
margin_right = 615.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "YOU DED"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Map" type="Navigation" parent="world" index="1"]

up_vector = Vector3( 0, 1, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Maze" parent="world" index="2" instance=ExtResource( 2 )]

transform = Transform( 3.34992, 0, 0, 0, 1.98732, 0, 0, 0, 3.59655, 0.942904, 0.721759, -1.03629 )

[node name="Exit1" type="Area" parent="world" index="3"]

editor/display_folded = true
transform = Transform( 2.66952, 0, -0.349732, 0, 2.7212, 0, 1.40436, 0, 0.380168, 12.763, 1.39714, -22.5641 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="world/Exit1" index="0"]

shape = SubResource( 1 )
disabled = false

[node name="Exit2" type="Area" parent="world" index="4"]

editor/display_folded = true
transform = Transform( 0.105305, 0, -0.5036, 0, 2.7212, 0, 3.01454, 0, -0.115006, 24.8958, 1.39714, -1.21581 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="world/Exit2" index="0"]

shape = SubResource( 1 )
disabled = false

[node name="Exit3" type="Area" parent="world" index="5"]

editor/display_folded = true
transform = Transform( -2.70961, 0, -0.100337, 0, 2.7212, 0, 1.32536, 0, -0.506727, 12.7448, 1.39714, 19.7446 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="world/Exit3" index="0"]

shape = SubResource( 1 )
disabled = false

[node name="Exit4" type="Area" parent="world" index="6"]

editor/display_folded = true
transform = Transform( -2.64749, 0, 0.355565, 0, 2.7212, 0, -1.44545, 0, -0.374717, -11.8415, 1.39714, 19.8321 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="world/Exit4" index="0"]

shape = SubResource( 1 )
disabled = false

[node name="Exit5" type="Area" parent="world" index="7"]

editor/display_folded = true
transform = Transform( 0.116839, 0, 0.49377, 0, 2.7212, 0, -3.01412, 0, 0.151757, -24.2188, 1.39714, -1.47083 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="world/Exit5" index="0"]

shape = SubResource( 1 )
disabled = false

[node name="Exit6" type="Area" parent="world" index="8"]

editor/display_folded = true
transform = Transform( 2.62592, 0, 0.130317, 0, 2.7212, 0, -1.48427, 0, 0.499857, -11.7178, 1.39714, -22.3357 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="world/Exit6" index="0"]

shape = SubResource( 1 )
disabled = false

[node name="RunAway" type="AudioStreamPlayer3D" parent="world" index="9"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.126227, 11.9709, 0.82618 )
stream = ExtResource( 4 )
attenuation_model = 0
unit_db = 6.0
unit_size = 6.0
max_db = 6.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[node name="StartPoint" type="Spatial" parent="world" index="10"]

transform = Transform( 0.999999, 0, -2.98023e-07, 0, 0.999999, 0, -1.49012e-07, 0, 0.999999, -13.0222, 0.862688, 7.2409 )
_sections_unfolded = [ "Transform" ]

[node name="NSPoint4" type="Spatial" parent="world" index="11"]

transform = Transform( 0.999999, 0, -2.98023e-07, 0, 0.999999, 0, -1.49012e-07, 0, 0.999999, -13.0222, 0.0304382, 7.2409 )
_sections_unfolded = [ "Transform" ]

[node name="NSPoint3" type="Spatial" parent="world" index="12"]

transform = Transform( 0.999999, 0, -2.83122e-07, 0, 0.999999, 0, -1.19209e-07, 0, 0.999999, 7.29329, 0.896202, 9.47555 )

[node name="NSPoint2" type="Spatial" parent="world" index="13"]

transform = Transform( 0.999999, 0, -2.68221e-07, 0, 0.999999, 0, -1.3411e-07, 0, 0.999999, 13.6439, 0.896202, -1.30364 )

[node name="NSPoint1" type="Spatial" parent="world" index="14"]

transform = Transform( 0.999999, 0, -2.98023e-07, 0, 0.999999, 0, -1.49012e-07, 0, 0.999999, 13.6439, 0.896202, -9.37753 )
_sections_unfolded = [ "Transform" ]

[node name="NSPoint5" type="Spatial" parent="world" index="15"]

transform = Transform( 0.999999, 0, -5.21541e-08, 0, 0.999999, 0, -8.9407e-08, 0, 0.999999, -20.0885, 0.896202, 5.84914 )

[node name="NSPoint6" type="Spatial" parent="world" index="16"]

transform = Transform( 1, 0, -5.96046e-08, 0, 1, 0, -1.19209e-07, 0, 1, -3.06261, 0.896202, -19.198 )

[node name="hexagon" parent="." index="1" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.859878, 0 )

[connection signal="body_entered" from="world/Exit1" to="world/Exit1" method="_on_EndState_body_entered"]

[connection signal="body_exited" from="world/Exit1" to="world/Exit1" method="_on_EndState_body_exited"]

[connection signal="body_entered" from="world/Exit2" to="world/Exit2" method="_on_EndState_body_entered"]

[connection signal="body_entered" from="world/Exit3" to="world/Exit3" method="_on_EndState_body_entered"]

[connection signal="body_entered" from="world/Exit4" to="world/Exit4" method="_on_EndState_body_entered"]

[connection signal="body_entered" from="world/Exit5" to="world/Exit5" method="_on_EndState_body_entered"]

[connection signal="body_entered" from="world/Exit6" to="world/Exit6" method="_on_EndState_body_entered"]


